force-app/main/default/objects/Kakao_Chat_Feed__c/Kakao_Chat_Feed__c.object-meta.xml
<CustomObject>
    <label>Kakao Chat Feed</label>
    <nameField>
        <displayFormat>KCF-{000000000}</displayFormat>
        <label>Kakao Chat Feed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kakao Chat Feeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>