force-app/main/default/objects/Kakao_Chat_Feed__c/fields/File_Url__c.field-meta.xml
<CustomField>
    <fullName>File_Url__c</fullName>
    <label>File Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>