force-app/main/default/objects/Kakao_Chat_Feed__c/fields/Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Image_Url__c</fullName>
    <label>Image Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>