force-app/main/default/objects/Kakao_Chat_Feed__c/fields/isAgent__c.field-meta.xml
<CustomField>
    <fullName>isAgent__c</fullName>
    <formula>ISPICKVAL(Sender__c, &apos;Agent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAgent</label>
    <type>Checkbox</type>
</CustomField>