force-app/main/default/objects/Kakao_Chat_Feed__c/fields/Kakao_Consult_Chat__c.field-meta.xml
<CustomField>
    <fullName>Kakao_Consult_Chat__c</fullName>
    <label>Kakao Consult Chat</label>
    <referenceTo>Kakao_Consult_Chat__c</referenceTo>
    <relationshipLabel>Kakao Chat Feed</relationshipLabel>
    <relationshipName>Kakao_Chat_Feed</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>