force-app/main/default/objects/Kakao_Chat_Feed__c/fields/Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Sent Time</label>
    <type>DateTime</type>
</CustomField>