force-app/main/default/objects/Kakao_Chat_Feed__c/fields/Sent_Time_formatted__c.field-meta.xml
<CustomField>
    <fullName>Sent_Time_formatted__c</fullName>
    <description>This field is only used as wrapper field for front end</description>
    <label>Sent Time formatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>