force-app/main/default/objects/Kakao_Chat_Feed__c/fields/Session_Live_fm__c.field-meta.xml
<CustomField>
    <fullName>Session_Live_fm__c</fullName>
    <formula>Kakao_Consult_Chat__r.Session_Live__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Live</label>
    <type>Checkbox</type>
</CustomField>