force-app/main/default/objects/Kakao_Chat_Feed__c/fields/User_Key_fm__c.field-meta.xml
<CustomField>
    <fullName>User_Key_fm__c</fullName>
    <formula>Kakao_Consult_Chat__r.User_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Key</label>
    <type>Text</type>
</CustomField>