force-app/main/default/objects/Kakao_Chat_Feed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sender__c</columns>
    <columns>Sent_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>